--- a/src/package.json
+++ b/src/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/munjalpatel/sponline"
+    "url": "git://github.com/munjalpatel/sponline.git"
   },
   "keywords": [
     "sponline",
